# ditto

./: .env.example  .gitignore  Cargo.toml  README.md  ditto.toml.example
.cargo/: config.toml
.github/workflows/: record.yml  replay.yml
crates/replay-compat/: Cargo.toml
crates/replay-compat/src/: bb8_diesel.rs  diesel.rs  http.rs  lib.rs  redis.rs  sql.rs  tokio.rs
crates/replay-compat/tests/: integration.rs
crates/replay-core/: Cargo.toml
crates/replay-core/src/: context.rs  fingerprint.rs  global_store.rs  interaction.rs  interceptor.rs  lib.rs  matching.rs  runner.rs  store.rs  types.rs
crates/replay-core/tests/: matching_test.rs  runner_test.rs  shadow_mode_test.rs  smoke.rs
crates/replay-diff/: Cargo.toml
crates/replay-diff/src/: diff.rs  lib.rs  manifest.rs  report.rs
crates/replay-interceptors/: Cargo.toml
crates/replay-interceptors/src/: diesel.rs  grpc.rs  harness.rs  http_client.rs  http_server.rs  lib.rs  postgres.rs  redis_client.rs
crates/replay-interceptors/src/middleware/: actix.rs  mod.rs  tower_layer.rs
crates/replay-interceptors/tests/: grpc_test.rs  harness_test.rs  http_client_test.rs  macro_test.rs  postgres_test.rs  propagation.rs  redis_test.rs  tower_layer_test.rs
crates/replay-macro/: Cargo.toml
crates/replay-macro/src/: expand.rs  instrument.rs  instrument_spawns.rs  instrument_trait.rs  lib.rs
crates/replay-macro/tests/: macro_tests.rs
crates/replay-store/: Cargo.toml
crates/replay-store/migrations/: 001_initial.sql  002_recording_summary_view.sql  003_add_tag.sql
crates/replay-store/src/: config.rs  lib.rs  memory.rs  postgres.rs  store.rs
crates/replay-store/tests/: contract.rs  smoke.rs
docs/: INTERCEPTORS.md  TROUBLESHOOTING.md  custom-framework.md
docs/examples/: elasticsearch_interceptor.rs
examples/custom-interceptor/: Cargo.toml
examples/custom-interceptor/src/: main.rs
examples/full-flow/: Cargo.toml  build.rs
examples/full-flow-faulty/: Cargo.toml  build.rs
examples/full-flow-faulty/src/: main.rs
examples/full-flow-faulty/src/diesel_models/: mod.rs  models.rs  schema.rs
examples/full-flow/proto/: fulfillment.proto
examples/full-flow/src/: main.rs
examples/full-flow/src/diesel_models/: mod.rs  models.rs  schema.rs
examples/minimal-axum/: Cargo.toml
examples/minimal-axum/src/: main.rs
server/: Cargo.toml
server/src/: config.rs  main.rs  types.rs
server/src/routes/: mod.rs  recordings.rs  replay.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: api.ts  main.tsx  types.ts
ui/src/components/: DiffViewer.tsx  RawViewer.tsx  RecordingsTable.tsx  ReplayPanel.tsx  RunAllPanel.tsx  StatusBadge.tsx  StepList.tsx  TagsList.tsx
ui/src/pages/: HomePage.tsx
