[workspace]
resolver = "2"
members = [
    "crates/replay-core",
    "crates/replay-store",
    "crates/replay-macro",
    "crates/replay-interceptors",
    "crates/replay-diff",
    "crates/replay-compat",
    "server",
    "examples/minimal-axum",
    "examples/custom-interceptor",
    "examples/full-flow",
    "examples/full-flow-faulty",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
