[package]
name    = "replay-compat"
version.workspace = true
edition.workspace = true

# ── feature flags ─────────────────────────────────────────────────────────────
# Enable only the client libraries your service actually uses.
[features]
default      = ["http", "redis", "sql", "diesel", "tokio-compat"]
http         = []
redis        = []
sql          = []
diesel       = []
tokio-compat = []

[dependencies]
replay-core         = { path = "../replay-core" }
replay-interceptors = { path = "../replay-interceptors" }

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
uuid        = { version = "1", features = ["v4", "serde"] }
tokio       = { version = "1", features = ["full"] }
thiserror   = "1"
async-trait = "0.1"

# HTTP
reqwest             = { version = "0.11", features = ["json"] }
reqwest-middleware  = "0.2"

# Redis
redis = { version = "0.23", features = ["tokio-comp"] }

# SQL
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "json"] }

# Diesel
diesel = { version = "2.1", features = ["postgres", "serde_json", "uuid", "chrono"] }
diesel-async = { version = "0.4", features = ["postgres", "deadpool"] }

[dev-dependencies]
replay-store = { path = "../replay-store" }
wiremock     = "0.5"
