[package]
name = "replay-diff"
version.workspace = true
edition.workspace = true

[dependencies]
replay-core = { path = "../replay-core" }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
regex       = "1"
uuid        = { version = "1", features = ["v4", "serde"] }
chrono      = { version = "0.4", features = ["serde"] }
toml        = "0.8"

[dev-dependencies]
replay-store = { path = "../replay-store" }
