[package]
name = "replay-interceptors"
version.workspace = true
edition.workspace = true

[[bin]]
name = "replay_test"
path = "src/bin/replay_test.rs"

[dependencies]
replay-core  = { path = "../replay-core" }
replay-store = { path = "../replay-store" }
replay-macro = { path = "../replay-macro" }
replay-diff  = { path = "../replay-diff" }

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
uuid       = { version = "1", features = ["v4", "serde"] }
tokio      = { version = "1", features = ["full"] }
thiserror  = "1"
async-trait = "0.1"

anyhow                  = "1"
chrono                  = { version = "0.4", features = ["serde"] }
task-local-extensions   = "0.1"
reqwest                 = { version = "0.11", features = ["json"] }
reqwest-middleware       = "0.2"

axum = "0.6"
http = "0.2"

sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "json"] }

tonic        = "0.10"
tower        = "0.4"
base64       = "0.21"
bytes        = "1"
http-body    = "0.4"
futures-util = "0.3"

redis = { version = "0.23", features = ["tokio-comp"] }

[dev-dependencies]
wiremock     = "0.5"
replay-macro = { path = "../replay-macro" }
