[package]
name = "replay-interceptors"
version.workspace = true
edition.workspace = true

[[bin]]
name = "replay_test"
path = "src/bin/replay_test.rs"

[[bin]]
name = "replay-audit"
path = "src/bin/audit.rs"
required-features = ["audit"]

[features]
default          = ["axum-middleware"]
axum-middleware  = []       # axum is always a dep; this gates the re-export
actix-middleware = ["dep:actix-web"]
audit            = ["dep:syn", "dep:walkdir", "dep:prettyplease", "dep:clap"]

[dependencies]
replay-core  = { path = "../replay-core" }
replay-store = { path = "../replay-store" }
replay-macro = { path = "../replay-macro" }
replay-diff  = { path = "../replay-diff" }

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
uuid       = { version = "1", features = ["v4", "serde"] }
tokio      = { version = "1", features = ["full"] }
thiserror  = "1"
async-trait = "0.1"

anyhow                  = "1"
chrono                  = { version = "0.4", features = ["serde"] }
task-local-extensions   = "0.1"
reqwest                 = { version = "0.11", features = ["json"] }
reqwest-middleware       = "0.2"

axum = "0.6"
http = "0.2"

sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "json"] }

# Diesel
diesel = { version = "2.3.5", features = ["postgres", "serde_json", "uuid", "chrono"] }
diesel-async = { version = "0.8", features = ["postgres", "deadpool"] }

tonic        = "0.10"
tower        = "0.4"
base64       = "0.21"
bytes        = "1"
http-body    = "0.4"
futures-util = "0.3"

redis = { version = "0.23", features = ["tokio-comp"] }

# Optional deps for actix-middleware feature
actix-web = { version = "4", optional = true }

# Optional deps for the replay-audit CLI (only compiled with `--features audit`)
syn          = { version = "2", features = ["full", "visit"], optional = true }
walkdir      = { version = "2", optional = true }
prettyplease = { version = "0.2", optional = true }
clap         = { version = "4", features = ["derive"], optional = true }

[dev-dependencies]
wiremock     = "0.5"
replay-macro = { path = "../replay-macro" }
