[package]
name = "replay-macro"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
syn        = { version = "2", features = ["full", "visit-mut"] }
quote      = "1"
proc-macro2 = "1"

[dev-dependencies]
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
uuid         = { version = "1", features = ["v4"] }
replay-core  = { path = "../replay-core" }
replay-store = { path = "../replay-store" }
