[package]
name = "replay-store"
version.workspace = true
edition.workspace = true

[dependencies]
replay-core = { path = "../replay-core" }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "json"] }
chrono     = { version = "0.4", features = ["serde"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
uuid       = { version = "1", features = ["v4", "serde"] }
tokio      = { version = "1", features = ["full"] }
thiserror  = "1"
async-trait = "0.1"
toml        = "0.8"
