[package]
name    = "custom-interceptor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "custom-interceptor"
path = "src/main.rs"

[dependencies]
replay-core  = { path = "../../crates/replay-core" }
replay-store = { path = "../../crates/replay-store" }

async-trait = "0.1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
tokio       = { version = "1", features = ["full"] }
uuid        = { version = "1", features = ["v4"] }
chrono      = { version = "0.4", features = ["serde"] }
