[package]
name    = "minimal-axum"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "minimal-axum"
path = "src/main.rs"

[dependencies]
replay-core         = { path = "../../crates/replay-core" }
replay-store        = { path = "../../crates/replay-store" }
replay-interceptors = { path = "../../crates/replay-interceptors", features = ["axum-middleware"] }
replay-compat       = { path = "../../crates/replay-compat" }

axum        = "0.6"
tokio       = { version = "1", features = ["full"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
uuid        = { version = "1", features = ["v4"] }
anyhow      = "1"
